[tool.poetry]
package-mode = false

[project]
name = "pulse"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.120.4)",
    "uvicorn (==0.38.0)",
    "asyncpg (==0.30.0)",
    "email-validator (==2.3.0)",
    "pydantic (==2.12.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
